style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: "Poppins", sans-serif;
  background-color: #000000;
  color: #fff;
}

a {
  text-decoration: none;
}

/* #00ff7f 
#0047ab
#b666d2
*/

.social_icons {
  display: flex;
  flex-direction: column;
  margin-left: 2rem;
  position: absolute;
  top: 40%;
  left: 0;
}

.social_icons img {
  width: 30px;
}

.social_icons a:not(:last-child) {
  margin-bottom: 2rem;
}

.navbar {
  padding: 3rem 4rem;
  display: flex;
  justify-content: center;
  background-color: transparent;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  z-index: 9999;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

.navbar a:not(:last-child) {
  margin-right: 10rem;
}

.navbar a {
  color:#64ffda;
}

.name {
  text-align: left;
}

.name span {
  font-size: 20px;
}

.name h3 {
  white-space: nowrap;
  overflow: hidden;
  animation: typing 4s steps(50, end);
}

.text {
  font-family: "Noto Sans TC", sans-serif;
  background: linear-gradient(
    271deg,
    #a0e9ff 30%,
    #a162e8 50%,
    #f093b0 70%,
    #edca85 94%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.main {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.8rem;
  padding: 8rem 0;
  margin-bottom: 3rem;
}

.projects {
  margin-top: 1rem;
  padding: 2rem 4rem;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.card {
  border-radius: 5px;
  overflow: hidden;
  width: 350px;
  margin-bottom: 4rem;
  display: flex;
  flex-direction: column;
  border: 2px solid #000000;
  transition: all 0.2s ease-in;
  animation: pop 1s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.card-img {
  width: 100%;
}

.card-hero {
  padding: 0.7rem;
}

.card-title {
  font-weight: 400;
  margin-bottom: 0.7rem;
}

.card-content {
  margin-bottom: 0.7rem;
}

.card:hover {
  border: 2px solid #64ffda;
}

.project {
  margin-left: 6rem;
  color: #444;
  font-size: 1.7rem;
}

.github {
  cursor: pointer;
  font-size: 1.3rem;
  color: #ffff;
  background-color: white;
  border-radius: 50%;
}

.contact {
  margin-top: 3rem;
  text-align: center;
  padding-bottom: 7rem;
}

.contact span {
  cursor: pointer;
  font-size: 15px;
  color: #64ffda;
}

.contact h1 {
  margin: 1rem 0rem;
  font-size: 3rem;
}

.contact p {
  width: 40%;
  margin: 2rem auto;
  color: #999;
  line-height: 1.8;
}

.button {
  display: inline-block;
  padding: 10px 20px;
  background-color: #64ffda;
  color: black;
  text-decoration: none;
  border-radius: 5px;
}

.button:hover {
  background-color: #3e8e41;
}


@media only screen and (max-width: 420px) {

  .social_icons {
    position: relative;
    top: 0;
    flex-direction: row;
    margin-bottom: 1rem;
  }

  .social_icons a:not(:last-child) {
    margin-bottom: 0;
    margin-right: 2rem;
  }

  .navbar {
    padding: 2rem
  }

  .navbar a:not(:last-child) {
    margin-right: 2rem;
  }

  .main {
    padding: 8rem 2rem 0rem;
  }


  .main,
  .project {
    font-size: 1rem;
  }


  .project {
    margin-left: 1rem;
  }

  .contact h1 {
    font-size: 2rem;
  }

  .contact p {
    width: 80%;
  }
}

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

